<resources>
    <string name="app_name">Playlist maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search_button">Поиск</string>
    <string name="mediateca">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="back">Назад</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search">Поиск</string>
    <string name="share_text">Изучайте Android-разработку в Практикуме! Перейдите по ссылке: https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="choose_app">Поделиться с помощью</string>
    <string name="support_email">example@example.com</string>
    <string name="email_subject"> Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_oferta">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="track_name">Название</string>
    <string name="executor">Исполнитель</string>
    <string name="duration">3:35</string>
    <string name="update">Обновить</string>
    <string name="no_results">Ничего не нашлось</string>
    <string name="error_occurred1">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="clear_the_history">Очистить историю</string>
    <string name="search_hint">Вводите название песни или имя исполнителя на английском языке</string>
    <string name="mediateka">Медиатека</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorites">Избранные треки</string>
    <string name="no_favorites_message">Ваша медиатека пуста</string>
    <string name="empty_favorites_image">Изображение отсутствия избранных треков</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists_message">Вы не создали\nни одного плейлиста</string>
    <string name="empty_state_image">Изображение состояния отсутствия данных</string>
    <string name="audio_player">Аудиоплеер</string>
    playlist_detail
    <string name="playlist_detail">Плейлист</string>

    <string name="playlist_cover">Обложка плейлиста</string>
    <string name="create_playlist">Создать</string>
    <string name="playlist_name_required">Введите название плейлиста</string>

    <string name="playlist_created">Плейлист %s создан</string>


    <string name="name_too_long">Название не должно превышать 100 символов</string>
    <string name="description_too_long">Описание не должно превышать 500 символов</string>

    <string name="no_playlists_created">У вас пока нет плейлистов</string>

    <string name="permission_rationale_title">Доступ к медиафайлам</string>
    <string name="permission_rationale_message">Для выбора обложки плейлиста приложению нужен доступ к вашим фотографиям. Разрешить?</string>
    <string name="allow">Разрешить</string>
    <string name="deny">Отклонить</string>
    <string name="discard_changes_title">Завершить создание плейлиста?</string>
    <string name="discard_changes_message">Все несохранённые данные будут потеряны</string>
    <string name="discard">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="creating_playlist">Создание...</string>
    <string name="error_creating_playlist">Не удалось создать плейлист. Попробуйте ещё раз.</string>


    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Название плейлиста</string>
    <string name="playlist_description">Описание</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="permission_rationale_title2">Необходимое разрешение</string>
    <string name="permission_denied_permanently_message">Для выбора изображения из галереи требуется разрешение. Вы можете включить его в настройках приложения.</string>
    <string name="go_to_settings">Настройки</string>

    <string name="playlist_updated">Плейлист обновлён</string>

    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="create">Создать</string>

    <string name="no_track">В этом плейлисте нет треков</string>



</resources>