<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/setting"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/primary_text_size"
        android:gravity="center_vertical"
        android:minHeight="56dp"
        android:layout_marginBottom="24dp"
        app:drawableStartCompat="@drawable/arrow" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/black_theme"
        android:minHeight="@dimen/minHeight"
        style="@style/AppTextStyleSetting" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_the_app"
        app:drawableEndCompat="@drawable/share"
        android:minHeight="@dimen/minHeight"
        style="@style/AppTextStyleSetting"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_to_support"
        app:drawableEndCompat="@drawable/support"
        android:minHeight="@dimen/minHeight"
        style="@style/AppTextStyleSetting"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/light_mode"
        android:minHeight="@dimen/minHeight"
        style="@style/AppTextStyleSetting"/>

</LinearLayout>


