<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_blue"
    android:orientation="vertical"
    android:padding="@dimen/standard_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="start"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_size"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/CustomMaterialButton"
        android:text="@string/search_button"
        app:icon="@drawable/vector"
        android:onClick="goToSearchActivity"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mediateca"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/CustomMaterialButton"
        android:text="@string/mediateca"
        app:icon="@drawable/mediateca"
        android:onClick="goToMediatekaActivity"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/CustomMaterialButton"
        android:text="@string/setting"
        app:icon="@drawable/setting"
        android:onClick="goToSettingsActivity" />

</LinearLayout>
