<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:clipToPadding="false">


        <LinearLayout
            style="@style/BackgroundAudioplayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/back"
                style="@style/TextStyleTopScreen"
                app:drawableStartCompat="@drawable/ic_back_arrow_48"
                android:layout_marginBottom="26dp"
                android:text="@string/new_playlist" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <FrameLayout
                    android:id="@+id/playlistCoverContainer"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="2dp"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintDimensionRatio="1:1">


                    <ImageView
                        android:id="@+id/playlistBorderImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:contentDescription="@null" />


                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/playlistCoverImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/playlist_cover"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Rounded8dp" />


                    <ImageView
                        android:id="@+id/playlistCenterIcon"
                        style="@style/PlaylistCenterIconStyle"
                        android:layout_gravity="center"
                        android:src="@drawable/vector1"
                        android:contentDescription="@null" />


                </FrameLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlistNameField"
                style="@style/TextInputLayoutPrimaryHint"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"

                android:hint="@string/playlist_name_hint"

                app:expandedHintEnabled="true">


                <com.google.android.material.textfield.TextInputEditText

                    style="@style/TextInputEditText"
                    android:importantForAutofill="noExcludeDescendants"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/playlistDescriptionField"
                style="@style/TextInputLayoutPrimaryHint"
                android:importantForAutofill="noExcludeDescendants"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"

                android:layout_marginTop="16dp"

                android:hint="@string/playlist_description_hint"

                app:expandedHintEnabled="true">


                <com.google.android.material.textfield.TextInputEditText

                    style="@style/TextInputEditText"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <Button
                android:id="@+id/createPlaylistButton"
                style="@style/ButtonCreatePlaylist"
                android:background="@drawable/button_create_playlist_background"
                android:layout_marginBottom="32dp"
                android:text="@string/create_playlist" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>